src/peach.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(program) { return program },
      peg$c1 = function(head, e) { return e },
      peg$c2 = function(head, tail) {
        return {
          kind: "Program",
          expressions: [head, ...tail]
        }
      },
      peg$c3 = function(e) { return e },
      peg$c4 = function(head, tail) {
        return [head, ...tail];
      },
      peg$c5 = "=",
      peg$c6 = peg$literalExpectation("=", false),
      peg$c7 = function(identifier_expr, value) {
        return {
          kind: "Def",
          name: identifier_expr.name,
          value
        }
      },
      peg$c8 = function(clauses) {
        return {
          kind: "Function",
          clauses
        }
      },
      peg$c9 = function(c) { return c },
      peg$c10 = function(head, c) { return c },
      peg$c11 = "=>",
      peg$c12 = peg$literalExpectation("=>", false),
      peg$c13 = function(pattern, body) {
        return Object.assign({ pattern }, body );
      },
      peg$c14 = function(single_expr) { return { body: [single_expr] } },
      peg$c15 = function(body) { return { body } },
      peg$c16 = function() { return [] },
      peg$c17 = function(single) { return [single] },
      peg$c18 = function(head, p) { return p },
      peg$c19 = "|",
      peg$c20 = peg$literalExpectation("|", false),
      peg$c21 = function(head, tail) {
        return {
          kind: "DestructuredArray",
          head,
          tail
        }
      },
      peg$c22 = "if",
      peg$c23 = peg$literalExpectation("if", false),
      peg$c24 = "else",
      peg$c25 = peg$literalExpectation("else", false),
      peg$c26 = function(condition, ifBranch, elseBranch) {
        return {
          kind: "If",
          condition,
          ifBranch,
          elseBranch
        }
      },
      peg$c27 = function(name) {
        return {
          kind: "Identifier",
          name
        }
      },
      peg$c28 = /^[a-zA-Z_$]/,
      peg$c29 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", "$"], false, false),
      peg$c30 = /^[a-zA-Z0-9\-_$]/,
      peg$c31 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "-", "_", "$"], false, false),
      peg$c32 = function(first, chars) { return first + chars.join("") },
      peg$c33 = "!",
      peg$c34 = peg$literalExpectation("!", false),
      peg$c35 = "+",
      peg$c36 = peg$literalExpectation("+", false),
      peg$c37 = "-",
      peg$c38 = peg$literalExpectation("-", false),
      peg$c39 = "*",
      peg$c40 = peg$literalExpectation("*", false),
      peg$c41 = "/",
      peg$c42 = peg$literalExpectation("/", false),
      peg$c43 = "%",
      peg$c44 = peg$literalExpectation("%", false),
      peg$c45 = "&&",
      peg$c46 = peg$literalExpectation("&&", false),
      peg$c47 = "||",
      peg$c48 = peg$literalExpectation("||", false),
      peg$c49 = "==",
      peg$c50 = peg$literalExpectation("==", false),
      peg$c51 = "<=>",
      peg$c52 = peg$literalExpectation("<=>", false),
      peg$c53 = "<=",
      peg$c54 = peg$literalExpectation("<=", false),
      peg$c55 = "<",
      peg$c56 = peg$literalExpectation("<", false),
      peg$c57 = ">=",
      peg$c58 = peg$literalExpectation(">=", false),
      peg$c59 = ">",
      peg$c60 = peg$literalExpectation(">", false),
      peg$c61 = /^[0-9]/,
      peg$c62 = peg$classExpectation([["0", "9"]], false, false),
      peg$c63 = function(digits) {
        return {
          kind: "Number",
          value: parseInt(digits.join(""), 10)
        };
      },
      peg$c64 = function(value) {
        return {
          kind: "Boolean",
          value
        }
      },
      peg$c65 = "true",
      peg$c66 = peg$literalExpectation("true", false),
      peg$c67 = function() { return true },
      peg$c68 = "false",
      peg$c69 = peg$literalExpectation("false", false),
      peg$c70 = function() { return false },
      peg$c71 = "`",
      peg$c72 = peg$literalExpectation("`", false),
      peg$c73 = function(tokens) {
        return {
          kind: "String",
          value: tokens.join("")
        }
      },
      peg$c74 = /^[^`]/,
      peg$c75 = peg$classExpectation(["`"], true, false),
      peg$c76 = "\\\\",
      peg$c77 = peg$literalExpectation("\\\\", false),
      peg$c78 = "\\`",
      peg$c79 = peg$literalExpectation("\\`", false),
      peg$c80 = "\\t",
      peg$c81 = peg$literalExpectation("\\t", false),
      peg$c82 = function() { return "\t" },
      peg$c83 = "\\n",
      peg$c84 = peg$literalExpectation("\\n", false),
      peg$c85 = function() { return "\n" },
      peg$c86 = "\\r",
      peg$c87 = peg$literalExpectation("\\r", false),
      peg$c88 = function() { return "\r" },
      peg$c89 = function(fn, a) { return a },
      peg$c90 = function(fn, maybe_args) {
        const args = maybe_args || []
        return {
          kind: "Call",
          fn,
          args
        }
      },
      peg$c91 = function() {
        return {
          kind: "Array",
          values: []
        }
      },
      peg$c92 = function(values) {
        return {
          kind: "Array",
          values
        }
      },
      peg$c93 = "t",
      peg$c94 = peg$literalExpectation("t", false),
      peg$c95 = function(items) {
        const values = items || []
        return {
          kind: "Tuple",
          values
        }
      },
      peg$c96 = "get",
      peg$c97 = peg$literalExpectation("get", false),
      peg$c98 = function(source, name) {
        return {
          kind: "Member",
          source,
          name
        }
      },
      peg$c99 = "(",
      peg$c100 = peg$literalExpectation("(", false),
      peg$c101 = function() { return "(" },
      peg$c102 = ")",
      peg$c103 = peg$literalExpectation(")", false),
      peg$c104 = function() { return ")" },
      peg$c105 = "[",
      peg$c106 = peg$literalExpectation("[", false),
      peg$c107 = function() { return "[" },
      peg$c108 = "]",
      peg$c109 = peg$literalExpectation("]", false),
      peg$c110 = function() { return "]" },
      peg$c111 = "{",
      peg$c112 = peg$literalExpectation("{", false),
      peg$c113 = function() { return "lb" },
      peg$c114 = "}",
      peg$c115 = peg$literalExpectation("}", false),
      peg$c116 = function() { return "rb" },
      peg$c117 = /^[ \t\r\n]/,
      peg$c118 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false),
      peg$c119 = /^[\r\n]/,
      peg$c120 = peg$classExpectation(["\r", "\n"], false, false),
      peg$c121 = /^[^\r\n]/,
      peg$c122 = peg$classExpectation(["\r", "\n"], true, false),
      peg$c123 = "#",
      peg$c124 = peg$literalExpectation("#", false),
      peg$c125 = ",",
      peg$c126 = peg$literalExpectation(",", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseprogram();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseprogram() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseprimary_expression();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseeol();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseprimary_expression();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c1(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseeol();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseprimary_expression();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c1(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseprimary_expression() {
    var s0, s1, s2, s3;

    s0 = peg$parsenumber();
    if (s0 === peg$FAILED) {
      s0 = peg$parseboolean();
      if (s0 === peg$FAILED) {
        s0 = peg$parsestring();
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parselp();
          if (s1 !== peg$FAILED) {
            s2 = peg$parseprimary_expression();
            if (s2 !== peg$FAILED) {
              s3 = peg$parserp();
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c3(s2);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
      }
    }

    return s0;
  }

  function peg$parseexpression_list() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseprimary_expression();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse__();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseprimary_expression();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c1(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse__();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseprimary_expression();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c1(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsevalue_list() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseprimary_expression();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parselist_delim();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseprimary_expression();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c1(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parselist_delim();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseprimary_expression();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c1(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsedef() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseidentifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 61) {
          s3 = peg$c5;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseprimary_expression();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c7(s1, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefunction() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseclause_list_optional_parens();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c8(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseclause_list_optional_parens() {
    var s0, s1, s2, s3;

    s0 = peg$parseclause_list();
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parselp();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseclause_list();
        if (s2 !== peg$FAILED) {
          s3 = peg$parserp();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c9(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseclause_list() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseclause();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse__();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseclause();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c10(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse__();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseclause();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c10(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseclause() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsepattern();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c11) {
          s3 = peg$c11;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse__();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseclause_body();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c13(s1, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseclause_body() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseprimary_expression();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c14(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parselb();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseexpression_list();
        if (s2 !== peg$FAILED) {
          s3 = peg$parserb();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c15(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parsepattern() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parselp();
    if (s1 !== peg$FAILED) {
      s2 = peg$parserp();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c16();
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsepattern_term();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c17(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$parsepattern_term_list();
      }
    }

    return s0;
  }

  function peg$parsepattern_term_list() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parselp();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsepattern_term();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parselist_delim();
        if (s5 !== peg$FAILED) {
          s6 = peg$parsepattern_term();
          if (s6 !== peg$FAILED) {
            peg$savedPos = s4;
            s5 = peg$c18(s2, s6);
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$parselist_delim();
          if (s5 !== peg$FAILED) {
            s6 = peg$parsepattern_term();
            if (s6 !== peg$FAILED) {
              peg$savedPos = s4;
              s5 = peg$c18(s2, s6);
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parserp();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsepattern_term() {
    var s0;

    s0 = peg$parseliteral();
    if (s0 === peg$FAILED) {
      s0 = peg$parseidentifier();
      if (s0 === peg$FAILED) {
        s0 = peg$parsedestructured_array();
        if (s0 === peg$FAILED) {
          s0 = peg$parseempty_array();
        }
      }
    }

    return s0;
  }

  function peg$parsedestructure_head() {
    var s0;

    s0 = peg$parseliteral();
    if (s0 === peg$FAILED) {
      s0 = peg$parseidentifier();
    }

    return s0;
  }

  function peg$parsedestructure_tail() {
    var s0;

    s0 = peg$parseidentifier();
    if (s0 === peg$FAILED) {
      s0 = peg$parsedestructured_array();
    }

    return s0;
  }

  function peg$parsedestructured_array() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
